# k8s-consul-mutator-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TESTING.md  build.rs  minikube_admission.yaml  minikube_demo.yaml  minikube_deployment.yaml  minikube_rbac.yaml  minikube_service.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
src/: api.rs  checksum.rs  config.rs  consul.rs  deployment_updater.rs  error.rs  k8s.rs  key_manager.rs  main.rs  state.rs  updater.rs
