[package]
name = "k8s-consul-mutator-rs"
description = "A mutating webhook that writes consul key checksums to resoures."
version = "0.1.0"
edition = "2021"
authors = ["Nick Gerakines <nick.gerakines@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ngerakines/something"
license = "MIT"
publish = false
build = "build.rs"

[dependencies]
anyhow = "1"
async-trait = {version = "0.1"}
axum = "0.6.2"
base64 = "0.21.0"
consulrs = "0.1.0"
ctrlc = { version = "3.0", features = ["termination"] }
futures-util = "0.3.17"
json-patch = "0.3.0"
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
kube = { version = "0.78.0", default-features = false, features = ["admission", "rustls-tls"] }
md5 = "0.7.0"
parking_lot = "0.12"
pin-project-lite = "0.2.7"
rand = "0.8"
sentry = { version = "0.29", default-features = false, features = ["backtrace", "contexts", "panic", "rustls", "reqwest", "tower", "tracing"] }
sentry-anyhow = "0.29"
sentry-tower = { version = "0.29", features = ["http"] }
sentry-tracing = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.89" }
tokio = { version = "1", features = ["full"] }
tokio-tasker = "1.2.0"
tower = { version = "0.4" }
tower-http = { version = "0.3", features = ["trace"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum-test-helper = { version = "0.2.0" }

[profile.release]
lto = true
strip = true
