[package]
name = "k8s-consul-mutator-rs"
description = "A mutating webhook that writes consul key checksums to resoures."
version = "0.1.0"
edition = "2021"
authors = ["Nick Gerakines <nick.gerakines@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ngerakines/k8s-consul-mutator-rs"
homepage = "https://github.com/ngerakines/k8s-consul-mutator-rs"
license = "MIT"
publish = false
build = "build.rs"
keywords = ["kubernetes", "consul"]

[features]
default = ["checksums", "v1_26"]
checksums = ["sha256", "md5"]
sha256 = ["dep:sha2"]
md5 = ["dep:md5"]
v1_26 = ["k8s-openapi/v1_26"]
v1_25 = ["k8s-openapi/v1_25"]
v1_24 = ["k8s-openapi/v1_24"]
v1_23 = ["k8s-openapi/v1_23"]
v1_22 = ["k8s-openapi/v1_22"]
v1_21 = ["k8s-openapi/v1_21"]
v1_20 = ["k8s-openapi/v1_20"]

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
async-trait = {version = "0.1"}
axum = "0.6.7"
axum-server = {version = "0.4.7", features = ["tls-rustls"]}
backoff = "0.4.0"
chrono = {version = "0.4.24",  default-features = false, features = ["clock"]}
consulrs = { git = "https://github.com/ngerakines/consulrs.git", rev = "b7c5d6dc9e8edb893fe59a2d54ac328d141d3f0b" }
derive_builder = "0.12.0"
futures-util = "0.3.27"
futures = "0.3.27"
json-patch = "0.3.0"
k8s-openapi = { version = "0.17.0", default-features = false, features = ["api"] }
kube = { version = "0.80.0", default-features = false, features = ["admission", "rustls-tls", "client", "runtime"] }
md5 = {version = "0.7.0", optional = true}
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.94" }
sha2 = {version = "0.10.6", optional = true}
tokio = { version = "1", features = ["full"] }
tokio-tasker = "1.2.0"
tower = { version = "0.4" }
tower-http = { version = "0.4", features = ["trace"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum-test-helper =  { git = "https://github.com/ngerakines/axum-test-helper.git", rev = "7cd729f049c3780960e0765043acb8386e1ba15f" }

[profile.release]
lto = true
strip = true
